fix wrong tmux-status path

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -54,7 +54,7 @@ window_details="'#{W:#{$quote_regex:window_name}#,}' '#{active_window_index}'"
 pane_details="'#{$quote_regex:pane_title}' '#{$quote_regex:pane_current_path}'"
 session_details="'#{$quote_regex:session_name}' '#{client_width}'"
 status_props="$pane_details $window_details $session_details #{window_zoomed_flag}"
-status="~/.config/tmux/status $status_props"
+status="~/.local/bin/tmux-status $status_props"
 set -g status-format[0] "#($status -1)"
 bind -n MouseDown1StatusDefault run "$status '#{mouse_x}'"
 
