--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -190,7 +190,8 @@ bind    r   if -F $not_popup 'command-prompt -I "rename-window "'
 # POPUP WINDOWS
 bind    M-w run ~/.config/tmux/popup-wpm.sh
 bind    M-p run ~/.config/tmux/popup-python.sh
-bind    M-g run ~/.config/tmux/popup-scratch.sh
+bind    M-n run ~/.config/tmux/popup-scratch.sh
+bind    M-g run ~/.config/tmux/popup-todo.sh
 bind -n M-f if -F $not_popup 'run ~/.config/tmux/popup-switch-session.sh'
 bind    M-t if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
 
