add kitty colors

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -48,17 +48,9 @@ listen_on unix:/tmp/kitty-sock
 # }}}
 # COLOR PALETTE {{{
 
-# include ~/.config/kitty/colors/old.conf
-# include ~/.config/kitty/colors/dark0.conf
-# include ~/.config/kitty/colors/dark1.conf
-# include ~/.config/kitty/colors/dark2.conf
-# include ~/.config/kitty/colors/dark3.conf
-
-# include ~/.config/kitty/colors/new.conf
-include ~/.config/kitty/colors/newest2.conf
+# include ~/.config/kitty/colors/light.conf
+include ~/.config/kitty/colors/dark.conf
 # include ~/.config/kitty/colors/onedark.conf
-
-# include ~/.config/kitty/colors/bright.conf
 
 # }}}
 # META KEYS {{{
@@ -174,6 +166,9 @@ map option+h send_text all \x1bh
 map ctrl+tab send_text all \x1b[1;5I
 map ctrl+shift+tab send_text all \x1b[1;6I
 
+map cmd+shift+1 set_colors ~/.config/kitty/colors/light.conf
+map cmd+shift+2 set_colors ~/.config/kitty/colors/dark.conf
+map cmd+shift+3 set_colors ~/.config/kitty/colors/dark.conf
 map cmd+shift+r load_config_file
 
 # }}}
