--- a/.config/jfind/config.json
+++ b/.config/jfind/config.json
@@ -2,6 +2,8 @@
     "selector": "",
     "active_selector": "",
     "history_limit": 0,
+    "matcher": "fuzzy",
+    "case_mode": "insensitive",
     "style": {
         "active_item": {
             "fg": "bright_white",
