--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -39,7 +39,7 @@ set -g set-titles-string "#T"
 set -g popup-border-style "fg=colour236"
 set -g pane-border-style "fg=colour236"
 set -g pane-active-border-style 'fg=colour236'
-set -g popup-border-lines single
+set -g popup-border-lines rounded
 
 # }}}
 # STATUS LINE {{{
