--- a/.config/kitty/colors/light.conf
+++ b/.config/kitty/colors/light.conf
@@ -1,259 +1,259 @@
-foreground #555555
+foreground #6a6a6a
 background #fafafa
-cursor #555555
-color0 #282828
-color1 #c45652
-color2 #88a649
-color3 #d1ad64
-color4 #519bc4
-color5 #bf67b4
-color6 #54a899
-color7 #90909c
-color8 #55565c
-color9 #fb4934
-color10 #8b9e62
-color11 #ada140
-color12 #83a598
-color13 #d3869b
-color14 #8ec07c
-color15 #555555
-color16 #90909c
-color17 #73b0d1
-color18 #73b0d1
-color19 #73b0d1
-color20 #83a598
-color21 #83a598
-color22 #9cb861
-color23 #7bbdb1
-color24 #73b0d1
-color25 #73b0d1
-color26 #73b0d1
-color27 #83a598
-color28 #9cb861
-color29 #9cb861
-color30 #7bbdb1
-color31 #7bbdb1
-color32 #73b0d1
-color33 #73b0d1
-color34 #9cb861
-color35 #9cb861
-color36 #7bbdb1
-color37 #7bbdb1
-color38 #7bbdb1
-color39 #7bbdb1
-color40 #8b9e62
-color41 #9cb861
-color42 #9cb861
-color43 #7bbdb1
-color44 #8ec07c
-color45 #8ec07c
-color46 #8b9e62
-color47 #8b9e62
-color48 #9cb861
-color49 #7bbdb1
-color50 #8ec07c
-color51 #8ec07c
-color52 #d46b68
-color53 #d17dc6
-color54 #73b0d1
-color55 #73b0d1
-color56 #73b0d1
-color57 #83a598
-color58 #d1ad64
-color59 #90909c
-color60 #90909c
-color61 #73b0d1
-color62 #73b0d1
-color63 #83a598
-color64 #9cb861
-color65 #90909c
-color66 #7bbdb1
-color67 #7bbdb1
-color68 #73b0d1
-color69 #73b0d1
-color70 #9cb861
-color71 #9cb861
-color72 #7bbdb1
-color73 #7bbdb1
-color74 #7bbdb1
-color75 #7bbdb1
-color76 #9cb861
-color77 #9cb861
-color78 #9cb861
-color79 #7bbdb1
-color80 #8ec07c
-color81 #8ec07c
-color82 #8b9e62
-color83 #8b9e62
-color84 #9cb861
-color85 #7bbdb1
-color86 #8ec07c
-color87 #8ec07c
-color88 #d46b68
-color89 #d46b68
-color90 #d17dc6
-color91 #d17dc6
-color92 #73b0d1
-color93 #73b0d1
-color94 #d46b68
-color95 #90909c
-color96 #d17dc6
-color97 #d17dc6
-color98 #73b0d1
-color99 #73b0d1
-color100 #d1ad64
-color101 #d1ad64
-color102 #90909c
-color103 #90909c
-color104 #90909c
-color105 #73b0d1
-color106 #d1ad64
-color107 #d1ad64
-color108 #90909c
-color109 #7bbdb1
-color110 #7bbdb1
-color111 #7bbdb1
-color112 #9cb861
-color113 #9cb861
-color114 #90909c
-color115 #7bbdb1
-color116 #8ec07c
-color117 #8ec07c
-color118 #9cb861
-color119 #9cb861
-color120 #9cb861
-color121 #7bbdb1
-color122 #8ec07c
-color123 #8ec07c
-color124 #d46b68
-color125 #d46b68
-color126 #d17dc6
-color127 #d17dc6
-color128 #d17dc6
-color129 #d17dc6
-color130 #d46b68
-color131 #d46b68
-color132 #d17dc6
-color133 #d17dc6
-color134 #d17dc6
-color135 #d17dc6
-color136 #d1ad64
-color137 #d1ad64
-color138 #90909c
-color139 #d17dc6
-color140 #d17dc6
-color141 #d17dc6
-color142 #d1ad64
-color143 #d1ad64
-color144 #d1ad64
-color145 #90909c
-color146 #90909c
-color147 #90909c
-color148 #d1ad64
-color149 #d1ad64
-color150 #d1ad64
-color151 #90909c
-color152 #8ec07c
-color153 #8ec07c
-color154 #d1ad64
-color155 #d1ad64
-color156 #d1ad64
-color157 #90909c
-color158 #8ec07c
-color159 #8ec07c
-color160 #fb4934
-color161 #d46b68
-color162 #d46b68
-color163 #d17dc6
-color164 #d3869b
-color165 #d3869b
-color166 #d46b68
-color167 #d46b68
-color168 #d46b68
-color169 #d17dc6
-color170 #d3869b
-color171 #d3869b
-color172 #d46b68
-color173 #d46b68
-color174 #90909c
-color175 #d17dc6
-color176 #d3869b
-color177 #d3869b
-color178 #d1ad64
-color179 #d1ad64
-color180 #d1ad64
-color181 #90909c
-color182 #d3869b
-color183 #d3869b
-color184 #bdb055
-color185 #bdb055
-color186 #bdb055
-color187 #bdb055
-color188 #555555
-color189 #555555
-color190 #bdb055
-color191 #bdb055
-color192 #bdb055
-color193 #bdb055
-color194 #555555
-color195 #8ec07c
-color196 #fb4934
-color197 #fb4934
-color198 #d46b68
-color199 #d17dc6
-color200 #d3869b
-color201 #d3869b
-color202 #fb4934
-color203 #fb4934
-color204 #d46b68
-color205 #d17dc6
-color206 #d3869b
-color207 #d3869b
-color208 #d46b68
-color209 #d46b68
-color210 #d46b68
-color211 #d17dc6
-color212 #d3869b
-color213 #d3869b
-color214 #d1ad64
-color215 #d1ad64
-color216 #d1ad64
-color217 #90909c
-color218 #d3869b
-color219 #d3869b
-color220 #bdb055
-color221 #bdb055
-color222 #bdb055
-color223 #bdb055
-color224 #555555
-color225 #d3869b
-color226 #bdb055
-color227 #bdb055
-color228 #bdb055
-color229 #bdb055
-color230 #bdb055
-color231 #555555
+cursor #6a6a6a
+color0 #303030
+color1 #e05661
+color2 #5da158
+color3 #bf9230
+color4 #3d92cc
+color5 #8a69b8
+color6 #51adac
+color7 #adadbb
+color8 #b8bac2
+color9 #e05661
+color10 #5da158
+color11 #c2b11f
+color12 #118dc3
+color13 #8a69b8
+color14 #51adac
+color15 #6a6a6a
+color16 #adadbb
+color17 #3d92cc
+color18 #3d92cc
+color19 #3d92cc
+color20 #118dc3
+color21 #118dc3
+color22 #5da158
+color23 #51adac
+color24 #3d92cc
+color25 #3d92cc
+color26 #3d92cc
+color27 #118dc3
+color28 #5da158
+color29 #5da158
+color30 #51adac
+color31 #51adac
+color32 #3d92cc
+color33 #3d92cc
+color34 #5da158
+color35 #5da158
+color36 #51adac
+color37 #51adac
+color38 #51adac
+color39 #51adac
+color40 #5da158
+color41 #5da158
+color42 #5da158
+color43 #51adac
+color44 #51adac
+color45 #51adac
+color46 #5da158
+color47 #5da158
+color48 #5da158
+color49 #51adac
+color50 #51adac
+color51 #51adac
+color52 #e05661
+color53 #8a69b8
+color54 #3d92cc
+color55 #3d92cc
+color56 #3d92cc
+color57 #118dc3
+color58 #bf9230
+color59 #adadbb
+color60 #adadbb
+color61 #3d92cc
+color62 #3d92cc
+color63 #118dc3
+color64 #5da158
+color65 #adadbb
+color66 #51adac
+color67 #51adac
+color68 #3d92cc
+color69 #3d92cc
+color70 #5da158
+color71 #5da158
+color72 #51adac
+color73 #51adac
+color74 #51adac
+color75 #51adac
+color76 #5da158
+color77 #5da158
+color78 #5da158
+color79 #51adac
+color80 #51adac
+color81 #51adac
+color82 #5da158
+color83 #5da158
+color84 #5da158
+color85 #51adac
+color86 #51adac
+color87 #51adac
+color88 #e05661
+color89 #e05661
+color90 #8a69b8
+color91 #8a69b8
+color92 #3d92cc
+color93 #3d92cc
+color94 #e05661
+color95 #adadbb
+color96 #8a69b8
+color97 #8a69b8
+color98 #3d92cc
+color99 #3d92cc
+color100 #bf9230
+color101 #bf9230
+color102 #adadbb
+color103 #adadbb
+color104 #adadbb
+color105 #3d92cc
+color106 #bf9230
+color107 #bf9230
+color108 #adadbb
+color109 #51adac
+color110 #51adac
+color111 #51adac
+color112 #5da158
+color113 #5da158
+color114 #adadbb
+color115 #51adac
+color116 #51adac
+color117 #51adac
+color118 #5da158
+color119 #5da158
+color120 #5da158
+color121 #51adac
+color122 #51adac
+color123 #51adac
+color124 #e05661
+color125 #e05661
+color126 #8a69b8
+color127 #8a69b8
+color128 #8a69b8
+color129 #8a69b8
+color130 #e05661
+color131 #e05661
+color132 #8a69b8
+color133 #8a69b8
+color134 #8a69b8
+color135 #8a69b8
+color136 #bf9230
+color137 #bf9230
+color138 #adadbb
+color139 #8a69b8
+color140 #8a69b8
+color141 #8a69b8
+color142 #bf9230
+color143 #bf9230
+color144 #bf9230
+color145 #adadbb
+color146 #adadbb
+color147 #adadbb
+color148 #bf9230
+color149 #bf9230
+color150 #bf9230
+color151 #adadbb
+color152 #51adac
+color153 #51adac
+color154 #bf9230
+color155 #bf9230
+color156 #bf9230
+color157 #adadbb
+color158 #51adac
+color159 #51adac
+color160 #e05661
+color161 #e05661
+color162 #e05661
+color163 #8a69b8
+color164 #8a69b8
+color165 #8a69b8
+color166 #e05661
+color167 #e05661
+color168 #e05661
+color169 #8a69b8
+color170 #8a69b8
+color171 #8a69b8
+color172 #e05661
+color173 #e05661
+color174 #adadbb
+color175 #8a69b8
+color176 #8a69b8
+color177 #8a69b8
+color178 #bf9230
+color179 #bf9230
+color180 #bf9230
+color181 #adadbb
+color182 #8a69b8
+color183 #8a69b8
+color184 #c2b11f
+color185 #c2b11f
+color186 #c2b11f
+color187 #c2b11f
+color188 #6a6a6a
+color189 #6a6a6a
+color190 #c2b11f
+color191 #c2b11f
+color192 #c2b11f
+color193 #c2b11f
+color194 #6a6a6a
+color195 #51adac
+color196 #e05661
+color197 #e05661
+color198 #e05661
+color199 #8a69b8
+color200 #8a69b8
+color201 #8a69b8
+color202 #e05661
+color203 #e05661
+color204 #e05661
+color205 #8a69b8
+color206 #8a69b8
+color207 #8a69b8
+color208 #e05661
+color209 #e05661
+color210 #e05661
+color211 #8a69b8
+color212 #8a69b8
+color213 #8a69b8
+color214 #bf9230
+color215 #bf9230
+color216 #bf9230
+color217 #adadbb
+color218 #8a69b8
+color219 #8a69b8
+color220 #c2b11f
+color221 #c2b11f
+color222 #c2b11f
+color223 #c2b11f
+color224 #6a6a6a
+color225 #8a69b8
+color226 #c2b11f
+color227 #c2b11f
+color228 #c2b11f
+color229 #c2b11f
+color230 #c2b11f
+color231 #6a6a6a
 color232 #fafafa
-color233 #f3f3f3
-color234 #ececec
-color235 #e5e5e5
-color236 #dedede
-color237 #d7d7d7
-color238 #d0d0d0
-color239 #c9c9c9
-color240 #c3c3c3
-color241 #bcbcbc
-color242 #b5b5b5
-color243 #aeaeae
-color244 #a7a7a7
-color245 #a0a0a0
-color246 #999999
-color247 #929292
-color248 #8c8c8c
-color249 #858585
-color250 #7e7e7e
-color251 #777777
-color252 #707070
-color253 #696969
-color254 #626262
-color255 #5b5b5b
+color233 #f4f4f4
+color234 #eeeeee
+color235 #e8e8e8
+color236 #e2e2e2
+color237 #dcdcdc
+color238 #d6d6d6
+color239 #cfcfcf
+color240 #cacaca
+color241 #c4c4c4
+color242 #bebebe
+color243 #b8b8b8
+color244 #b2b2b2
+color245 #acacac
+color246 #a6a6a6
+color247 #a0a0a0
+color248 #9a9a9a
+color249 #949494
+color250 #8e8e8e
+color251 #888888
+color252 #828282
+color253 #7c7c7c
+color254 #767676
+color255 #707070
