--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -39,7 +39,7 @@ set -g set-titles-string "#T"
 set -g popup-border-style "fg=colour236"
 set -g pane-border-style "fg=colour236"
 set -g pane-active-border-style 'fg=colour236'
-set -g popup-border-lines rounded
+set -g popup-border-lines single
 
 # }}}
 # STATUS LINE {{{
@@ -87,6 +87,7 @@ bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
 # KILL
+not_popup='#{!=:#S,popup}'
 bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
 bind -n 'M-W' killp
 
