--- a/.config/jfind/config.json
+++ b/.config/jfind/config.json
@@ -4,6 +4,8 @@
     "history_limit": 20,
     "matcher": "fuzzy",
     "case_mode": "insensitive",
+    "window_style": "merged",
+    "wrap_item_list": true,
     "style": {
         "active_item": {
             "fg": "bright_white",
@@ -13,7 +15,13 @@
         "hint": {
             "fg": 240
         },
+        "border": {
+            "fg": 236
+        },
         "active_row": {
+            "bg": 233
+        },
+        "preview_line": {
             "bg": 233
         },
         "active_selector": {
