--- a/.config/kitty/colors/dark.conf
+++ b/.config/kitty/colors/dark.conf
@@ -1,5 +1,5 @@
 foreground #a1a1a1
-background #313338
+background #31343c
 cursor #a1a1a1
 color0 #303030
 color1 #d96e6b
@@ -233,27 +233,27 @@ color228 #cec46e
 color229 #cec46e
 color230 #cec46e
 color231 #a1a1a1
-color232 #313338
-color233 #35373c
-color234 #3a3c40
-color235 #3f4045
-color236 #434549
-color237 #48494d
-color238 #4d4e52
-color239 #515356
-color240 #56575b
-color241 #5b5c5f
-color242 #5f6063
-color243 #646568
-color244 #696a6c
-color245 #6d6e70
-color246 #727375
-color247 #777779
-color248 #7b7c7e
-color249 #808082
-color250 #858586
+color232 #31343c
+color233 #353840
+color234 #3a3d44
+color235 #3f4148
+color236 #43464c
+color237 #484a51
+color238 #4d4f55
+color239 #515359
+color240 #56585d
+color241 #5b5c61
+color242 #5f6166
+color243 #64656a
+color244 #696a6e
+color245 #6d6f72
+color246 #727376
+color247 #77787b
+color248 #7b7c7f
+color249 #808183
+color250 #858587
 color251 #898a8b
-color252 #8e8e8f
-color253 #939393
+color252 #8e8e90
+color253 #939394
 color254 #979798
 color255 #9c9c9c
