--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,6 +24,8 @@ italic_font      Custom Sans Italic
 bold_font        Custom Sans Bold
 bold_italic_font Custom Sans Bold Italic
 
+# shell cat
+
 # }}}
 # SETTINGS {{{
 
@@ -43,7 +45,7 @@ macos_show_window_title_in none
 macos_titlebar_color background
 allow_remote_control socket
 listen_on unix:/tmp/kitty-sock
-#background_opacity 0.5
+# background_opacity 0.9
 
 # }}}
 # COLOR PALETTE {{{
@@ -168,7 +170,10 @@ map ctrl+shift+tab send_text all \x1b[1;6I
 
 map cmd+shift+1 set_colors ~/.config/kitty/colors/light.conf
 map cmd+shift+2 set_colors ~/.config/kitty/colors/dark.conf
-map cmd+shift+3 set_colors ~/.config/kitty/colors/dark.conf
+map cmd+shift+6 set_colors ~/.config/kitty/colors/onedark.conf
+map cmd+shift+7 set_colors ~/.config/kitty/colors/dark-greyscale.conf
+map cmd+shift+8 set_colors ~/.config/kitty/colors/nord.conf
+map cmd+shift+9 set_colors ~/.config/kitty/colors/dark2.conf
 map cmd+shift+r load_config_file
 
 # }}}
