--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -88,8 +88,8 @@ bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
 # KILL
 not_popup='#{!=:#S,popup}'
-bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
-bind -n 'M-W' killp
+# bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
+bind -n 'M-w' killp
 
 # ZOOM
 bind -n M-z resize-pane -Z
@@ -105,14 +105,18 @@ bind -n M-I resize-pane -U
 bind -n M-O resize-pane -R
 
 # SWAPPING
-bind h splitw -fhb \; swapp -t ! \; killp -t !
-bind j splitw -fv  \; swapp -t ! \; killp -t !
-bind k splitw -fvb \; swapp -t ! \; killp -t !
-bind l splitw -fh  \; swapp -t ! \; killp -t !
-bind M-h splitw -fhb \; swapp -t ! \; killp -t !
-bind M-j splitw -fv  \; swapp -t ! \; killp -t !
-bind M-k splitw -fvb \; swapp -t ! \; killp -t !
-bind M-l splitw -fh  \; swapp -t ! \; killp -t !
+bind H splitw -fhb \; swapp -t ! \; killp -t !
+bind J splitw -fv  \; swapp -t ! \; killp -t !
+bind K splitw -fvb \; swapp -t ! \; killp -t !
+bind L splitw -fh  \; swapp -t ! \; killp -t !
+bind h swapp -t "{left-of}"
+bind j swapp -t "{down-of}"
+bind k swapp -t "{up-of}"
+bind l swapp -t "{right-of}"
+bind M-h swapp -t "{left-of}"
+bind M-j swapp -t "{down-of}"
+bind M-k swapp -t "{up-of}"
+bind M-l swapp -t "{right-of}"
 
 # SPLITTING
 bind -n M-n split-window -h -c "#{pane_current_path}"
@@ -176,6 +180,7 @@ bind -n M-u copy-mode \; send -X halfpage-up
 bind -n M-d copy-mode \; send -X halfpage-down
 
 # MISC
+bind    c   send-keys -R
 bind -n M-: command-prompt
 bind    M-s source ~/.config/tmux/tmux.conf
 bind -n M-p if -F $not_popup 'switch-client -l'
