--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -53,6 +53,9 @@ listen_on unix:/tmp/kitty-sock
 # include ~/.config/kitty/colors/light.conf
 include ~/.config/kitty/colors/dark.conf
 # include ~/.config/kitty/colors/onedark.conf
+# include ~/.config/kitty/colors/hacker.conf
+# include ~/.config/kitty/colors/tomorrow_night.conf
+# include ~/.config/kitty/colors/chadtain.conf
 
 # }}}
 # META KEYS {{{
@@ -168,12 +171,32 @@ map option+h send_text all \x1bh
 map ctrl+tab send_text all \x1b[1;5I
 map ctrl+shift+tab send_text all \x1b[1;6I
 
-map cmd+shift+1 set_colors ~/.config/kitty/colors/light.conf
-map cmd+shift+2 set_colors ~/.config/kitty/colors/dark.conf
-map cmd+shift+6 set_colors ~/.config/kitty/colors/onedark.conf
-map cmd+shift+7 set_colors ~/.config/kitty/colors/dark-greyscale.conf
-map cmd+shift+8 set_colors ~/.config/kitty/colors/nord.conf
-map cmd+shift+9 set_colors ~/.config/kitty/colors/dark2.conf
+map ctrl+1 combine
+    \ : launch --type background ~/.config/kitty/theme dark
+    \ : set_colors ~/.config/kitty/colors/dark.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+2 combine
+    \ : launch --type background ~/.config/kitty/theme nord
+    \ : set_colors ~/.config/kitty/colors/nord.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+3 combine
+    \ : launch --type background ~/.config/kitty/theme light
+    \ : set_colors ~/.config/kitty/colors/light.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+4 combine
+    \ : launch --type background ~/.config/kitty/theme hacker
+    \ : set_colors ~/.config/kitty/colors/hacker.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+5 combine
+    \ : launch --type background ~/.config/kitty/theme dark
+    \ : set_colors ~/.config/kitty/colors/darkblue.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+shift+r load_config_file
 map cmd+shift+r load_config_file
 
 # }}}
