--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,8 @@
 # COMPATABILITY {{{
 
 set -g default-terminal "${TERM}"
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 # }}}
 # MISC OPTIONS {{{
@@ -80,7 +82,7 @@ set-window-option -g mode-keys vi
 
 # NAVIGATION
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?nvim$'"
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h' 'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j' 'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
@@ -190,16 +192,21 @@ bind    M-f if -F $not_popup 'choose-tree -s -Z'
 bind    M   if -F $not_popup 'command-prompt -I "move-window -t "'
 bind    m   if -F $not_popup 'command-prompt -I "join-pane -t "'
 
+bind    M-d detach
+
 bind    R   if -F $not_popup 'command-prompt -I "rename-session "'
 bind    r   if -F $not_popup 'command-prompt -I "rename-window "'
 
 # POPUP WINDOWS
 bind    M-w run ~/.config/tmux/popup-wpm.sh
 bind    M-p run ~/.config/tmux/popup-python.sh
-bind    M-n run ~/.config/tmux/popup-scratch.sh
+bind    M-n run ~/.config/tmux/fullscreen-scratch.sh
 bind    M-g run ~/.config/tmux/popup-todo.sh
 bind -n M-f if -F $not_popup 'run ~/.config/tmux/popup-switch-session.sh'
 bind    M-t if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
+bind -n "M-;" if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
+
+bind User1 if -F $not_popup 'run "~/.config/tmux/switch-session.sh scratch"'
 
 # }}}
 
