--- a/.config/kitty/colors/onedark.conf
+++ b/.config/kitty/colors/onedark.conf
@@ -1,259 +1,259 @@
-foreground #abb2bf
-background #282c34
-cursor #abb2bf
-color0 #282c34
-color1 #be5046
-color2 #98c379
-color3 #d19a66
-color4 #61afef
-color5 #c678dd
-color6 #56b6c2
-color7 #5c6370
-color8 #4b5263
-color9 #ff583e
-color10 #a7be76
-color11 #e5c07b
-color12 #9dc6b6
-color13 #fda1ba
-color14 #aae695
-color15 #abb2bf
-color16 #5c6370
-color17 #61afef
-color18 #61afef
-color19 #61afef
-color20 #9dc6b6
-color21 #9dc6b6
-color22 #98c379
-color23 #56b6c2
-color24 #61afef
-color25 #61afef
-color26 #61afef
-color27 #9dc6b6
-color28 #98c379
-color29 #98c379
-color30 #56b6c2
-color31 #56b6c2
-color32 #61afef
-color33 #61afef
-color34 #98c379
-color35 #98c379
-color36 #56b6c2
-color37 #56b6c2
-color38 #56b6c2
-color39 #56b6c2
-color40 #a7be76
-color41 #98c379
-color42 #98c379
-color43 #56b6c2
-color44 #aae695
-color45 #aae695
-color46 #a7be76
-color47 #a7be76
-color48 #98c379
-color49 #56b6c2
-color50 #aae695
-color51 #aae695
-color52 #be5046
-color53 #c678dd
-color54 #61afef
-color55 #61afef
-color56 #61afef
-color57 #9dc6b6
-color58 #d19a66
-color59 #5c6370
-color60 #5c6370
-color61 #61afef
-color62 #61afef
-color63 #9dc6b6
-color64 #98c379
-color65 #5c6370
-color66 #56b6c2
-color67 #56b6c2
-color68 #61afef
-color69 #61afef
-color70 #98c379
-color71 #98c379
-color72 #56b6c2
-color73 #56b6c2
-color74 #56b6c2
-color75 #56b6c2
-color76 #98c379
-color77 #98c379
-color78 #98c379
-color79 #56b6c2
-color80 #aae695
-color81 #aae695
-color82 #a7be76
-color83 #a7be76
-color84 #98c379
-color85 #56b6c2
-color86 #aae695
-color87 #aae695
-color88 #be5046
-color89 #be5046
-color90 #c678dd
-color91 #c678dd
-color92 #61afef
-color93 #61afef
-color94 #be5046
-color95 #5c6370
-color96 #c678dd
-color97 #c678dd
-color98 #61afef
-color99 #61afef
-color100 #d19a66
-color101 #d19a66
-color102 #5c6370
-color103 #5c6370
-color104 #5c6370
-color105 #61afef
-color106 #d19a66
-color107 #d19a66
-color108 #5c6370
-color109 #56b6c2
-color110 #56b6c2
-color111 #56b6c2
-color112 #98c379
-color113 #98c379
-color114 #5c6370
-color115 #56b6c2
-color116 #aae695
-color117 #aae695
-color118 #98c379
-color119 #98c379
-color120 #98c379
-color121 #56b6c2
-color122 #aae695
-color123 #aae695
-color124 #be5046
-color125 #be5046
-color126 #c678dd
-color127 #c678dd
-color128 #c678dd
-color129 #c678dd
-color130 #be5046
-color131 #be5046
-color132 #c678dd
-color133 #c678dd
-color134 #c678dd
-color135 #c678dd
-color136 #d19a66
-color137 #d19a66
-color138 #5c6370
-color139 #c678dd
-color140 #c678dd
-color141 #c678dd
-color142 #d19a66
-color143 #d19a66
-color144 #d19a66
-color145 #5c6370
-color146 #5c6370
-color147 #5c6370
-color148 #d19a66
-color149 #d19a66
-color150 #d19a66
-color151 #5c6370
-color152 #aae695
-color153 #aae695
-color154 #d19a66
-color155 #d19a66
-color156 #d19a66
-color157 #5c6370
-color158 #aae695
-color159 #aae695
-color160 #ff583e
-color161 #be5046
-color162 #be5046
-color163 #c678dd
-color164 #fda1ba
-color165 #fda1ba
-color166 #be5046
-color167 #be5046
-color168 #be5046
-color169 #c678dd
-color170 #fda1ba
-color171 #fda1ba
-color172 #be5046
-color173 #be5046
-color174 #5c6370
-color175 #c678dd
-color176 #fda1ba
-color177 #fda1ba
-color178 #d19a66
-color179 #d19a66
-color180 #d19a66
-color181 #5c6370
-color182 #fda1ba
-color183 #fda1ba
-color184 #e5c07b
-color185 #e5c07b
-color186 #e5c07b
-color187 #e5c07b
-color188 #abb2bf
-color189 #abb2bf
-color190 #e5c07b
-color191 #e5c07b
-color192 #e5c07b
-color193 #e5c07b
-color194 #abb2bf
-color195 #aae695
-color196 #ff583e
-color197 #ff583e
-color198 #be5046
-color199 #c678dd
-color200 #fda1ba
-color201 #fda1ba
-color202 #ff583e
-color203 #ff583e
-color204 #be5046
-color205 #c678dd
-color206 #fda1ba
-color207 #fda1ba
-color208 #be5046
-color209 #be5046
-color210 #be5046
-color211 #c678dd
-color212 #fda1ba
-color213 #fda1ba
-color214 #d19a66
-color215 #d19a66
-color216 #d19a66
-color217 #5c6370
-color218 #fda1ba
-color219 #fda1ba
-color220 #e5c07b
-color221 #e5c07b
-color222 #e5c07b
-color223 #e5c07b
-color224 #abb2bf
-color225 #fda1ba
-color226 #e5c07b
-color227 #e5c07b
-color228 #e5c07b
-color229 #e5c07b
-color230 #e5c07b
-color231 #abb2bf
-color232 #282c34
-color233 #2d3139
-color234 #32373f
-color235 #383c45
-color236 #3d424b
-color237 #434750
-color238 #484d56
-color239 #4e535c
-color240 #535862
-color241 #595e68
-color242 #5e636d
-color243 #646973
-color244 #696f79
-color245 #6e747f
-color246 #747a85
-color247 #797f8a
-color248 #7f8590
-color249 #848a96
-color250 #8a909c
-color251 #8f96a2
-color252 #959ba7
-color253 #9aa1ad
-color254 #a0a6b3
-color255 #a5acb9
+foreground #959ca5
+background #21252b
+cursor #959ca5
+color0 #000000
+color1 #d05c65
+color2 #889f69
+color3 #bc895b
+color4 #619fbf
+color5 #a678bd
+color6 #76b6b2
+color7 #a1a1a1
+color8 #4d5058
+color9 #e06c75
+color10 #98c379
+color11 #c5b07b
+color12 #61afef
+color13 #c678dd
+color14 #56b6c2
+color15 #959ca5
+color16 #a1a1a1
+color17 #619fbf
+color18 #619fbf
+color19 #619fbf
+color20 #61afef
+color21 #61afef
+color22 #889f69
+color23 #76b6b2
+color24 #619fbf
+color25 #619fbf
+color26 #619fbf
+color27 #61afef
+color28 #889f69
+color29 #889f69
+color30 #76b6b2
+color31 #76b6b2
+color32 #619fbf
+color33 #619fbf
+color34 #889f69
+color35 #889f69
+color36 #76b6b2
+color37 #76b6b2
+color38 #76b6b2
+color39 #76b6b2
+color40 #98c379
+color41 #889f69
+color42 #889f69
+color43 #76b6b2
+color44 #56b6c2
+color45 #56b6c2
+color46 #98c379
+color47 #98c379
+color48 #889f69
+color49 #76b6b2
+color50 #56b6c2
+color51 #56b6c2
+color52 #d05c65
+color53 #a678bd
+color54 #619fbf
+color55 #619fbf
+color56 #619fbf
+color57 #61afef
+color58 #bc895b
+color59 #a1a1a1
+color60 #a1a1a1
+color61 #619fbf
+color62 #619fbf
+color63 #61afef
+color64 #889f69
+color65 #a1a1a1
+color66 #76b6b2
+color67 #76b6b2
+color68 #619fbf
+color69 #619fbf
+color70 #889f69
+color71 #889f69
+color72 #76b6b2
+color73 #76b6b2
+color74 #76b6b2
+color75 #76b6b2
+color76 #889f69
+color77 #889f69
+color78 #889f69
+color79 #76b6b2
+color80 #56b6c2
+color81 #56b6c2
+color82 #98c379
+color83 #98c379
+color84 #889f69
+color85 #76b6b2
+color86 #56b6c2
+color87 #56b6c2
+color88 #d05c65
+color89 #d05c65
+color90 #a678bd
+color91 #a678bd
+color92 #619fbf
+color93 #619fbf
+color94 #d05c65
+color95 #a1a1a1
+color96 #a678bd
+color97 #a678bd
+color98 #619fbf
+color99 #619fbf
+color100 #bc895b
+color101 #bc895b
+color102 #a1a1a1
+color103 #a1a1a1
+color104 #a1a1a1
+color105 #619fbf
+color106 #bc895b
+color107 #bc895b
+color108 #a1a1a1
+color109 #76b6b2
+color110 #76b6b2
+color111 #76b6b2
+color112 #889f69
+color113 #889f69
+color114 #a1a1a1
+color115 #76b6b2
+color116 #56b6c2
+color117 #56b6c2
+color118 #889f69
+color119 #889f69
+color120 #889f69
+color121 #76b6b2
+color122 #56b6c2
+color123 #56b6c2
+color124 #d05c65
+color125 #d05c65
+color126 #a678bd
+color127 #a678bd
+color128 #a678bd
+color129 #a678bd
+color130 #d05c65
+color131 #d05c65
+color132 #a678bd
+color133 #a678bd
+color134 #a678bd
+color135 #a678bd
+color136 #bc895b
+color137 #bc895b
+color138 #a1a1a1
+color139 #a678bd
+color140 #a678bd
+color141 #a678bd
+color142 #bc895b
+color143 #bc895b
+color144 #bc895b
+color145 #a1a1a1
+color146 #a1a1a1
+color147 #a1a1a1
+color148 #bc895b
+color149 #bc895b
+color150 #bc895b
+color151 #a1a1a1
+color152 #56b6c2
+color153 #56b6c2
+color154 #bc895b
+color155 #bc895b
+color156 #bc895b
+color157 #a1a1a1
+color158 #56b6c2
+color159 #56b6c2
+color160 #e06c75
+color161 #d05c65
+color162 #d05c65
+color163 #a678bd
+color164 #c678dd
+color165 #c678dd
+color166 #d05c65
+color167 #d05c65
+color168 #d05c65
+color169 #a678bd
+color170 #c678dd
+color171 #c678dd
+color172 #d05c65
+color173 #d05c65
+color174 #a1a1a1
+color175 #a678bd
+color176 #c678dd
+color177 #c678dd
+color178 #bc895b
+color179 #bc895b
+color180 #bc895b
+color181 #a1a1a1
+color182 #c678dd
+color183 #c678dd
+color184 #c5b07b
+color185 #c5b07b
+color186 #c5b07b
+color187 #c5b07b
+color188 #959ca5
+color189 #959ca5
+color190 #c5b07b
+color191 #c5b07b
+color192 #c5b07b
+color193 #c5b07b
+color194 #959ca5
+color195 #56b6c2
+color196 #e06c75
+color197 #e06c75
+color198 #d05c65
+color199 #a678bd
+color200 #c678dd
+color201 #c678dd
+color202 #e06c75
+color203 #e06c75
+color204 #d05c65
+color205 #a678bd
+color206 #c678dd
+color207 #c678dd
+color208 #d05c65
+color209 #d05c65
+color210 #d05c65
+color211 #a678bd
+color212 #c678dd
+color213 #c678dd
+color214 #bc895b
+color215 #bc895b
+color216 #bc895b
+color217 #a1a1a1
+color218 #c678dd
+color219 #c678dd
+color220 #c5b07b
+color221 #c5b07b
+color222 #c5b07b
+color223 #c5b07b
+color224 #959ca5
+color225 #c678dd
+color226 #c5b07b
+color227 #c5b07b
+color228 #c5b07b
+color229 #c5b07b
+color230 #c5b07b
+color231 #959ca5
+color232 #21252b
+color233 #252930
+color234 #2a2e35
+color235 #2f333a
+color236 #34383f
+color237 #393d44
+color238 #3e4249
+color239 #42474e
+color240 #474c53
+color241 #4c5158
+color242 #51565d
+color243 #565b62
+color244 #5b6068
+color245 #5f656d
+color246 #646a72
+color247 #696f77
+color248 #6e747c
+color249 #737981
+color250 #787e86
+color251 #7c838b
+color252 #818890
+color253 #868d95
+color254 #8b929a
+color255 #90979f
