--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,8 +24,6 @@ italic_font      Custom Sans Italic
 bold_font        Custom Sans Bold
 bold_italic_font Custom Sans Bold Italic
 
-# shell cat
-
 # }}}
 # SETTINGS {{{
 
@@ -193,7 +191,12 @@ map ctrl+4 combine
 
 map ctrl+5 combine
     \ : launch --type background ~/.config/kitty/theme dark
-    \ : set_colors ~/.config/kitty/colors/darkblue.conf
+    \ : set_colors ~/.config/kitty/colors/kanagawa.conf
+    \ : launch --type background tmux refresh-client
+
+map ctrl+6 combine
+    \ : launch --type background ~/.config/kitty/theme dark
+    \ : set_colors ~/.config/kitty/colors/kanagawa_dragon.conf
     \ : launch --type background tmux refresh-client
 
 map ctrl+shift+r load_config_file
