--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,6 +20,7 @@ set -s escape-time 0          # remove delay for escape
 set -g status-keys emacs      # allows esc key to exit commandline mode
 set -g renumber-windows on    # stop new tabs appearing behind last
 set -g history-limit 10000    # store 10,000 lines of scrollback
+set -g wrap-search off
 
 # }}}
 # MOUSE {{{
@@ -52,10 +53,13 @@ set -g message-style "bg=colour234"
 set -g message-command-style "bg=colour234"
 
 quote_regex="s/'/'\"'\"'/"
-window_details="'#{W:#{$quote_regex:window_name}#,}' '#{active_window_index}'"
-pane_details="'#{$quote_regex:pane_title}' '#{$quote_regex:pane_current_path}'"
-session_details="'#{$quote_regex:session_name}' '#{client_width}'"
-status_props="$pane_details $window_details $session_details #{window_zoomed_flag}"
+window="'#{W:#{$quote_regex:window_name}#,}' '#{active_window_index}'"
+pane="'#{$quote_regex:pane_title}' '#{$quote_regex:pane_current_path}'"
+session="'#{$quote_regex:session_name}' '#{client_width}'"
+selection_y="'#{selection_start_y}' '#{selection_end_y}'"
+selection_x="'#{selection_start_x}' '#{selection_end_x}'"
+selection="$selection_y $selection_x"
+status_props="$_pane $window $session $selection #{window_zoomed_flag}"
 status="~/.local/bin/tmux-status $status_props"
 set -g status-format[0] "#($status -1)"
 bind -n MouseDown1StatusDefault run "$status '#{mouse_x}'"
@@ -88,6 +92,11 @@ bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j' 'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
+bind-key -n 'C-j' send-keys Down
+bind-key -n 'C-k' send-keys Up
+
+bind-key M-c send-keys -R \; clear-history
+
 # KILL
 not_popup='#{!=:#S,popup}'
 # bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
@@ -111,18 +120,20 @@ bind H splitw -fhb \; swapp -t ! \; killp -t !
 bind J splitw -fv  \; swapp -t ! \; killp -t !
 bind K splitw -fvb \; swapp -t ! \; killp -t !
 bind L splitw -fh  \; swapp -t ! \; killp -t !
-bind h swapp -t "{left-of}"
-bind j swapp -t "{down-of}"
-bind k swapp -t "{up-of}"
-bind l swapp -t "{right-of}"
-bind M-h swapp -t "{left-of}"
-bind M-j swapp -t "{down-of}"
-bind M-k swapp -t "{up-of}"
-bind M-l swapp -t "{right-of}"
+bind h select-pane -L \; swapp -t "{right-of}"
+bind j select-pane -D \; swapp -t "{up-of}"
+bind k select-pane -U \; swapp -t "{down-of}"
+bind l select-pane -R \; swapp -t "{left-of}"
+bind M-h select-pane -L \; swapp -t "{right-of}"
+bind M-j select-pane -D \; swapp -t "{up-of}"
+bind M-k select-pane -U \; swapp -t "{down-of}"
+bind M-l select-pane -R \; swapp -t "{left-of}"
 
 # SPLITTING
 bind -n M-n split-window -h -c "#{pane_current_path}"
 bind -n M-b split-window -v -c "#{pane_current_path}"
+bind -n M-N split-window -h
+bind -n M-B split-window -v
 bind M-b break-pane
 
 # NAVIGATING TABS (ctrl/ctrl+shift + tab)
@@ -150,7 +161,7 @@ bind -T copy-mode-vi M-u send -X halfpage-up
 bind -T copy-mode-vi M-d send -X halfpage-down
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
-bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
+bind -T copy-mode-vi t send-keys -X copy-pipe "pbcopy"
 bind -T copy-mode-vi Escape if-shell -F '#{selection_present}' \
                                         'send-keys -X clear-selection' \
                                         'send-keys -X cancel'
