--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,6 +64,17 @@ status="~/.local/bin/tmux-status $status_props"
 set -g status-format[0] "#($status -1)"
 bind -n MouseDown1StatusDefault run "$status '#{mouse_x}'"
 
+# # status bar
+# set -g status-interval 10
+# set -g status-justify left
+# set -g window-status-current-style fg=blue,bg=default,reverse
+# set -g status-style fg=default,bg=colour235
+# set -g status-left '#{W:#{?#{window_active},#[bg=blue] #W #[bg=default], #W }}'
+# set -g status-right "#{pane_title} #[bg=default,fg=blue,reverse] #{session_name} #[bg=default,fg=default,noreverse] %H:%M %d-%b-%y"
+# set -g status-format[0] '#{T:status-left}#[align=right]#{T:status-right}'
+# set -g status-format[1] ''
+
+
 # }}}
 # MODE STYLE {{{
 
