--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,6 +27,7 @@ bold_italic_font Custom Sans Bold Italic
 # }}}
 # SETTINGS {{{
 
+cursor_text_color background
 shell_integration disabled
 strip_trailing_spaces smart
 enable_audio_bell no
