--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,6 +47,7 @@ set -g popup-border-lines single
 # }}}
 # STATUS LINE {{{
 
+set -g status-position "bottom"
 set -g status-interval 30
 set -g status-style ""
 set -g message-style "bg=colour234"
@@ -59,7 +60,7 @@ session="'#{$quote_regex:session_name}' '#{client_width}'"
 selection_y="'#{selection_start_y}' '#{selection_end_y}'"
 selection_x="'#{selection_start_x}' '#{selection_end_x}'"
 selection="$selection_y $selection_x"
-status_props="$_pane $window $session $selection #{window_zoomed_flag}"
+status_props="$pane $window $session $selection #{window_zoomed_flag}"
 status="~/.local/bin/tmux-status $status_props"
 set -g status-format[0] "#($status -1)"
 bind -n MouseDown1StatusDefault run "$status '#{mouse_x}'"
@@ -92,6 +93,8 @@ set -g copy-mode-mark-style 'fg=black,bg=white'
 
 unbind-key -a
 
+not_popup='#{!=:#S,popup}'
+
 set -g prefix M-g
 set-window-option -g mode-keys vi
 
@@ -108,8 +111,6 @@ bind-key -n 'C-k' send-keys Up
 
 bind-key M-c send-keys -R \; clear-history
 
-# KILL
-not_popup='#{!=:#S,popup}'
 # bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
 bind -n 'M-w' killp
 
@@ -145,7 +146,9 @@ bind -n M-n split-window -h -c "#{pane_current_path}"
 bind -n M-b split-window -v -c "#{pane_current_path}"
 bind -n M-N split-window -h
 bind -n M-B split-window -v
-bind M-b break-pane
+
+bind M-b if -F $not_popup 'break-pane' \
+    'run "tmux move-window -t $(tmux display -p #{popup_last_session})"'
 
 # NAVIGATING TABS (ctrl/ctrl+shift + tab)
 set -s user-keys[0] "\e[1;5I"
@@ -197,8 +200,6 @@ bind -n M-? copy-mode \; command-prompt -T search -i -p "?" \
 # stop mouse from exiting copy mode
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection -x
 
-not_popup='#{!=:#S,popup}'
-
 # SCROLL
 bind -n M-u copy-mode \; send -X halfpage-up
 bind -n M-d copy-mode \; send -X halfpage-down
@@ -219,6 +220,9 @@ bind    M-d detach
 bind    R   if -F $not_popup 'command-prompt -I "rename-session "'
 bind    r   if -F $not_popup 'command-prompt -I "rename-window "'
 
+# pane_id=$(tmux display -p "#D")
+bind    M-y run -b '~/.config/tmux/yes.sh "#D"'
+
 # POPUP WINDOWS
 bind    M-w run ~/.config/tmux/popup-wpm.sh
 bind    M-p run ~/.config/tmux/popup-python.sh
@@ -226,7 +230,7 @@ bind    M-n run ~/.config/tmux/fullscreen-scratch.sh
 bind    M-g run ~/.config/tmux/popup-todo.sh
 bind -n M-f if -F $not_popup 'run ~/.config/tmux/popup-switch-session.sh'
 bind    M-t if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
-bind -n "M-;" if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
+bind -n "M-;" if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"' detach
 
 bind User1 if -F $not_popup 'run "~/.config/tmux/switch-session.sh scratch"'
 
