--- a/.config/nvim/typescript/package.json
+++ b/.config/nvim/typescript/package.json
@@ -3,19 +3,7 @@
     "version": "1.0.0",
     "dependencies": {
         "@typescript-to-lua/language-extensions": "^1.19.0",
-        "npm-watch": "^0.11.0",
-        "tsnvim": "file:/Users/jakey/.local/share/nvim/ts.nvim/package",
+        "tsnvim": "^1.0.0",
         "typescript-to-lua": "^1.23.0"
-    },
-    "watch": {
-        "foo": {
-            "patterns": [ "src" ],
-            "extensions": "ts,js",
-            "quiet": false
-        }
-    },
-    "scripts": {
-        "watch": "npm-watch foo",
-        "foo": "echo lmao"
     }
 }
