--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,7 +20,8 @@ set -s escape-time 0          # remove delay for escape
 set -g status-keys emacs      # allows esc key to exit commandline mode
 set -g renumber-windows on    # stop new tabs appearing behind last
 set -g history-limit 10000    # store 10,000 lines of scrollback
-set -g wrap-search off
+set -g wrap-search on
+set -g focus-events on
 
 # }}}
 # MOUSE {{{
@@ -39,6 +40,8 @@ set -g set-titles-string "#T"
 # }}}
 # POPUP WINDOWS {{{
 
+set-hook -g pane-focus-in "run -b '~/.config/tmux/flash.sh 236 245'"
+
 set -g popup-border-style "fg=colour236"
 set -g pane-border-style "fg=colour236"
 set -g pane-active-border-style 'fg=colour236'
@@ -56,7 +59,7 @@ set -g message-command-style "bg=colour234"
 quote_regex="s/'/'\"'\"'/"
 window="'#{W:#{$quote_regex:window_name}#,}' '#{active_window_index}'"
 pane="'#{$quote_regex:pane_title}' '#{$quote_regex:pane_current_path}'"
-session="'#{$quote_regex:session_name}' '#{client_width}'"
+session="'#{session_id}' '#{$quote_regex:session_name}' '#{session_color}' '#{client_width}'"
 selection_y="'#{selection_start_y}' '#{selection_end_y}'"
 selection_x="'#{selection_start_x}' '#{selection_end_x}'"
 selection="$selection_y $selection_x"
@@ -114,6 +117,8 @@ bind-key M-c send-keys -R \; clear-history
 # bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
 bind -n 'M-w' killp
 
+bind -n 'M-r' splitw -h \; select-pane -L \; splitw -v \; select-pane -U \; killp \; select-pane -R \; killp
+
 # ZOOM
 bind -n M-z resize-pane -Z
 
@@ -166,6 +171,8 @@ bind -n User2 swap-window -t -1 \; previous-window
 bind -n User3 swap-window -t +1 \; next-window
 
 # COPY MODE
+bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
 bind -n M-v copy-mode
 bind -n M-Escape copy-mode
 bind -T copy-mode-vi a send -X cancel
@@ -173,12 +180,19 @@ bind -T copy-mode-vi u send -X halfpage-up
 bind -T copy-mode-vi d send -X halfpage-down
 bind -T copy-mode-vi M-u send -X halfpage-up
 bind -T copy-mode-vi M-d send -X halfpage-down
-bind -T copy-mode-vi v send -X begin-selection
+
+bind -T copy-mode-vi -n Escape send -X clear-selection
+
+bind -T copy-mode-vi v if -F '#{rectangle_toggle}' \
+    "if -F '#{selection_present}' '' 'send -X begin-selection'; send -X rectangle-toggle" \
+    "if -F '#{selection_present}' 'send -X clear-selection' 'send -X begin-selection'"
+bind -T copy-mode-vi C-v if -F '#{rectangle_toggle}' \
+    "if -F '#{selection_present}' 'send -X clear-selection' 'send -X begin-selection'" \
+    "if -F '#{selection_present}' '' 'send -X begin-selection'; send -X rectangle-toggle"
+
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 bind -T copy-mode-vi t send-keys -X copy-pipe "pbcopy"
-bind -T copy-mode-vi Escape if-shell -F '#{selection_present}' \
-                                        'send-keys -X clear-selection' \
-                                        'send-keys -X cancel'
+
 bind -T copy-mode-vi g switch-client -T visual-g
 
 bind -T visual-g g send -X history-top
@@ -227,7 +241,9 @@ bind    M-y run -b '~/.config/tmux/yes.sh "#D"'
 bind    M-w run ~/.config/tmux/popup-wpm.sh
 bind    M-p run ~/.config/tmux/popup-python.sh
 bind    M-n run ~/.config/tmux/fullscreen-scratch.sh
+bind    n   run "~/.config/tmux/fullscreen-scratch.sh bruh"
 bind    M-g run ~/.config/tmux/popup-todo.sh
+# bind -n C-t run ~/.config/tmux/popup-jfind-tmux-complete.sh
 bind -n M-f if -F $not_popup 'run ~/.config/tmux/popup-switch-session.sh'
 bind    M-t if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"'
 bind -n "M-;" if -F $not_popup 'run "~/.config/tmux/popup-terminal.sh zsh"' detach
